# distributed-video-processing

./: CMakeLists.txt  README.md  code.cpp  try1.cpp
